# deckhand

./: .deckhandignore  .gitignore  Cargo.toml  README.md  VERSION  deckhand.toml  deliver.toml  install.sh  kaptaind.toml
.brandi/: identity.yaml
.dumdum/: context.md  last-report.json  state.tsv
.kaptaind/: ast_cache.json  daemon.out  status.json  telemetry.json  traces.db  version_cache.json
.kaptaind/analysis/: 80c51718-90de-4241-9b6b-fa1f873dfc81.json  92c42ab7-4028-48e8-a7f3-28bd7bd74266.json  e7c133c5-0b9f-4c1a-a22a-59c68e032d00.json
docs/: LANGUAGES.md  branding.md  deckhand.1
docs/dummies/: README.md  deckhand-for-dummies.md
scripts/: agy-logo.py  generate-logo.py
src/: auto_clean.rs  auto_start.rs  clean.rs  color.rs  config.rs  deep_clean.rs  emoji.rs  fmt.rs  fs.rs  init.rs  inspect.rs  lib.rs  main.rs  spinner.rs  status.rs  sweep.rs  systemd.rs  test_util.rs  tts.rs  update.rs  walk.rs  workspace.rs
src/build_system/: cargo.rs  dotnet.rs  go.rs  gradle.rs  maven.rs  mod.rs  node.rs  python.rs  swift.rs
src/daemon/: mod.rs  monitor.rs  notify.rs  service.rs  state.rs
