[package]
name = "deckhand"
version = "0.21.7"
edition = "2021"
authors = ["Elci Group <deckhand@example.com>"]
description = "Deterministic build-surface maintenance and hygiene agent for Cargo workspaces"
readme = "README.md"
license = "MIT"
repository = "https://github.com/elci-group/deckhand"
homepage = "https://github.com/elci-group/deckhand"
rust-version = "1.74"

[[bin]]
name = "deckhand"
path = "src/main.rs"

[features]
# Native desktop notifications via org.freedesktop.Notifications (notify-rust/zbus).
# The default build stays dependency-free and uses notify-send or the log backend.
dbus = ["dep:notify-rust"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
notify-rust = { version = "4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
